[gd_scene load_steps=5 format=3 uid="uid://g7r7vc84mtb"]

[ext_resource type="Script" uid="uid://chmap6c4gcewb" path="res://cs/tests/卡牌相关/牌型识别测试/HandTypeTest.gd" id="1_handtypetest"]
[ext_resource type="PackedScene" uid="uid://qyrjutr0b5rg" path="res://cs/主场景/ui/HandDock.tscn" id="2_handdock"]
[ext_resource type="PackedScene" uid="uid://c7aq81vj4ec5i" path="res://cs/主场景/ui/DeckWidget.tscn" id="3_deckwidget"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_info_panel"]
bg_color = Color(0.0705882, 0.0862745, 0.207843, 0.741176)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.356863, 0.568627, 0.901961, 0.737255)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.239216)
shadow_size = 3

[node name="HandTypeTestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_handtypetest")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="HandDock" parent="." instance=ExtResource("2_handdock")]
layout_mode = 1

[node name="TopInfoPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 150.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_info_panel")

[node name="VBox" type="VBoxContainer" parent="TopInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="TopInfoPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.670588, 0.831373, 0.976471, 1)
theme_override_font_sizes/font_size = 20
text = "✦ 出牌系统测试 ✦"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="TopInfoPanel/VBox"]
layout_mode = 2

[node name="TurnInfoLabel" type="Label" parent="TopInfoPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866667, 0.933333, 1, 1)
theme_override_font_sizes/font_size = 14
text = "回合: 0 | 阶段: 未开始 | 选择: 0/5"

[node name="ScoreLabel" type="Label" parent="TopInfoPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.87, 0.55, 1)
theme_override_font_sizes/font_size = 14
text = "本回合: 0 | 总分: 0"

[node name="ActionsLabel" type="Label" parent="TopInfoPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 1, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "出牌: 0/3 | 弃牌: 0/2"

[node name="ControlPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_info_panel")

[node name="VBox" type="VBoxContainer" parent="ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.670588, 0.831373, 0.976471, 1)
theme_override_font_sizes/font_size = 18
text = "✧ 测试控制 ✧"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="ControlPanel/VBox"]
layout_mode = 2

[node name="StartTurnButton" type="Button" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.87, 0.55, 1)
theme_override_font_sizes/font_size = 16
text = "✦ 开始回合 (R) ✦"

[node name="NextTurnButton" type="Button" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 1, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "✧ 下回合 (N) ✧"

[node name="TestLabel" type="Label" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866667, 0.933333, 1, 1)
theme_override_font_sizes/font_size = 12
text = "快捷键:
R - 开始回合
N - 下回合
1 - 出牌(吟唱咒语)
2 - 弃牌(使用精华)"
autowrap_mode = 2

[node name="TestSuiteButton" type="Button" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "运行测试套件 (T)"

[node name="StatusPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 450.0
offset_top = 20.0
offset_right = 750.0
offset_bottom = 120.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_info_panel")

[node name="VBox" type="VBoxContainer" parent="StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="StatusPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.670588, 0.831373, 0.976471, 1)
theme_override_font_sizes/font_size = 16
text = "✧ 实时状态 ✧"
horizontal_alignment = 1

[node name="StatusText" type="Label" parent="StatusPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866667, 0.933333, 1, 1)
theme_override_font_sizes/font_size = 12
text = "等待初始化..."
autowrap_mode = 2

[node name="HandTypeResultPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 450.0
offset_top = 140.0
offset_right = 750.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_info_panel")

[node name="VBox" type="VBoxContainer" parent="HandTypeResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultTitleLabel" type="Label" parent="HandTypeResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "🎯 牌型识别结果"
horizontal_alignment = 1

[node name="HandTypeLabel" type="Label" parent="HandTypeResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "牌型: 等待识别..."

[node name="BestCardsLabel" type="Label" parent="HandTypeResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 12
text = "最佳组合: 无"
autowrap_mode = 2

[node name="ScoreCalculationLabel" type="Label" parent="HandTypeResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "计算: 无"
autowrap_mode = 2

[node name="PerformanceLabel" type="Label" parent="HandTypeResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 11
text = "性能: 0ms, 0组合"

[node name="DeckWidget" parent="." instance=ExtResource("3_deckwidget")]
layout_mode = 1
offset_left = -250.0
offset_top = -360.0
offset_right = -30.0
offset_bottom = -20.0
